<resources>
    <string name="app_name">testMAYKOR</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="username">Username</string>
    <string name="enter">Вход</string>
    <string name="password">Password</string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="firstName">Имя</string>
    <string name="lastName">Фамилия</string>
    <string name="photoPassport">фото паспорта</string>
    <string name="send">Отправить</string>
</resources>
