<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.example.roman.testmaykor.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="26dp" />

    <EditText
        android:id="@+id/eTxtUsername"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="210dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewLogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/eTxtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="333dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/enter"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardViewLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/signUp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="405dp" />

    <EditText
        android:id="@+id/eTxtPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/eTxtUsername"
        android:layout_below="@+id/eTxtUsername"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="265dp" />

</RelativeLayout>
